--- a/index.html
+++ b/index.html
@@ -17,12 +17,24 @@
 
 <body>
 
- <!-- navigation code here -->
+  <div section class="navigation-container">
+    <h1>SpaceWalkers</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+      <a href="#">Sign In</a>
+    </nav>
+  </div>
 
   <div class="container home">
 
     <header class="intro">
-       <!-- image code here -->
+      
+       <div class="header-img">
+         <img src="img/main-header.png" alt="Out in space"/>
+       </div>
 
       <h2>Lift Off</h2>
     
